[package]
name = "RC-SoftCheats"
version = "0.1.5"
authors = ["FssAy"]
edition = "2018"


[dependencies]
ansi_term = "0.12.1"
enigo = "0.0.14"
lazy_static = "1.4.0"
winconsole = "0.11.1"
console = "0.12.0"
discord-rpc-client = "^0.2"
winapi = "*"
winmm-sys = "*"
user32-sys = "*"
autopilot = "0.4.0"
image = "0.23.10"
serde_json = "1.0.59"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "wincon", "minwindef"] }
